trying to fix page reload on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html {
 }
 body {
   font-family: "Open Sans", sans-serif;
+  overscroll-behavior: contain;
 }
 h1, h2 {
   font-family: Bitter, sans-serif;
